--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ p {
     color:#0E1224;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    font-size: medium;
 }
 h2 {
     color: #0E1224;
@@ -22,10 +23,17 @@ h4 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
 }
+
 a {
     color:#9b1823;
 }
 
+img {
+    display: block;
+    margin: auto;
+    width: 50%;
+    border-radius: 25px;
+  }
 #navigationBar {
     list-style-type: none;
     padding: 0;
@@ -69,7 +77,8 @@ a {
 }
 .creditsUL {
     display: inline-block;
-    text-align: left;
+    list-style: none;
+    font-size: medium;
 }
 
 .mainText {
